# proto-gen-md-diagrams

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  NOTICE  README.md  RELEASE_NOTES.md  WORKSPACE  WORKSPACE.bzlmod  deps.bzl  go.mod  go.sum  main.go  owners.txt
.github/workflows/: coverage.yml  main.yml
.ijwb/: .bazelproject
cmd/: BUILD.bazel  proto-gen-md-diagrams.go
pkg/api/: BUILD.bazel  graph.go  interfaces.go  protocol_buffers.go  shared_types.go
pkg/logging/: BUILD.bazel  logger.go
pkg/markdown/: BUILD.bazel  main.go
pkg/markdown/templates/: package.tmpl
pkg/mermaid/: BUILD.bazel  constants.go  main.go
pkg/pb/: BUILD.bazel  enums.go  factory.go  message.go  package.go  qualified.go  service.go
pkg/proto/: BUILD.bazel  annotation.go  annotation_test.go  app.go  attribute.go  attribute_test.go  attribute_visitor.go  attribute_visitor_test.go  comment.go  comment_test.go  comment_visitor.go  comment_visitor_test.go  constants.go  e2e_test.go  enum.go  enum_test.go  enum_value.go  enum_value_test.go  enum_value_visitor.go  enum_value_visitor_test.go  enum_visitor.go  enum_visitor_test.go  import.go  import_test.go  import_visitor.go  import_visitor_test.go  interfaces.go  line.go  line_test.go  logger.go  logger_test.go  markdown.go  markdown_test.go  message.go  message_test.go  message_visitor.go  message_visitor_test.go  model.go  model_test.go  option_visitor.go  (+25 more)
pkg/proto/data/: input_test_file.txt
pkg/proto/data/test/location/: model.proto  model.proto.md  model_example.md
pkg/proto/data/test/service/: service.proto  service.proto.md
pkg/reader/: BUILD.bazel  constants.go  file_reader_test.go  model.go  reader_package.go  scanner.go  string_util.go  vis_comment.go  vis_enum.go  vis_message.go  vis_package.go  vis_rpc.go  vis_rpc_option.go  vis_service.go
test/: BUILD.bazel  graph_test.go  model_reader_test.go  render_markdown_test.go  service_reader_test.go
test/data/: BUILD.bazel
test/data/api/location/: model.proto.md
test/data/api/service/: service.proto  service.proto.md
test/data/location/: model.proto
test/data/templates/: README.md  attribute.tmpl  attribute_annotation.tmpl  attribute_kind.tmpl  base.tmpl  enum.tmpl  message.tmpl  package.tmpl  style.tmpl
