load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/rrmcguinness/proto-diagram-tool
# gazelle:exclude test/protos/**
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "proto-diagram-tool_lib",
    srcs = ["main.go"],
    importpath = "github.com/rrmcguinness/proto-diagram-tool",
    visibility = ["//visibility:private"],
    deps = ["//pkg/proto"],
)

go_binary(
    name = "proto-diagram-tool",
    embed = [":proto-diagram-tool_lib"],
    visibility = ["//visibility:public"],
)

platform(
    name = "mac_x64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
)
