# Name and version the module
module(
    name = "proto-gen-md-diagrams",
    version = "0.2.0",
)

bazel_dep(name = "rules_go", version = "0.55.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "platforms", version = "1.0.0")

################################################################################
# Go Lang Setup
################################################################################
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
go_sdk.download(version = "1.23.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Based on the go_deps, create the following exported symbols.
use_repo(
    go_deps,
    "com_github_stretchr_testify",
)
