load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["proto-gen-md-diagrams.go"],
    importpath = "github.com/GoogleCloudPlatform/proto-gen-md-diagrams",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "cmd",
    basename = "proto-gen-md-diagrams",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
