load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

exports_files(
    ["data/**"],
    [
        "//pkg:__subpackages__",
        "//test:__subpackages__",
    ],
)

filegroup(
    name = "data",
    srcs = glob(["data/**/*.proto"]) + glob(["data/**/*.txt"]),
    visibility = [
        "//:__subpackages__",
    ],
)

go_test(
    name = "model_readers",
    size = "small",
    srcs = [
        "model_reader_test.go",
        "service_reader_test.go",
    ],
    data = glob(["data/**"]),
    deps = [
        "//pkg/api",
        "//pkg/logging",
        "//pkg/pb",
        "//pkg/reader",
        "@com_github_stretchr_testify//assert",
    ],
)

go_test(
    name = "markdown_render",
    size = "small",
    srcs = [
        "render_markdown_test.go",
    ],
    data = glob(["data/**"]),
    deps = [
        "//pkg/api",
        "//pkg/logging",
        "//pkg/markdown",
        "//pkg/pb",
        "//pkg/reader",
        "@com_github_stretchr_testify//assert",
    ],
)
