load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "reader_test",
    size = "small",
    srcs = [
        "model_reader_test.go",
        "service_reader_test.go",
    ],
    data = ["//test/data:api"],
    deps = [
        "//pkg/api",
        "//pkg/logging",
        "//pkg/pb",
        "//pkg/reader",
        "@com_github_stretchr_testify//assert",
    ],
)

go_test(
    name = "markdown_test",
    size = "small",
    srcs = [
        "render_markdown_test.go",
    ],
    data = [
        "//test/data:api",
        "//test/data:templates",
    ],
    deps = [
        "//pkg/api",
        "//pkg/logging",
        "//pkg/markdown",
        "//pkg/pb",
        "//pkg/reader",
        "@com_github_stretchr_testify//assert",
    ],
)

go_test(
    name = "graph_test",
    srcs = ["graph_test.go"],
    deps = [
        "//pkg/api",
        "@com_github_stretchr_testify//assert",
    ],
)
