load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "proto",
    srcs = [
        "annotation.go",
        "attribute.go",
        "attribute_visitor.go",
        "comment.go",
        "comment_visitor.go",
        "constants.go",
        "enum.go",
        "enum_value.go",
        "enum_value_visitor.go",
        "enum_visitor.go",
        "import.go",
        "import_visitor.go",
        "interfaces.go",
        "line.go",
        "logger.go",
        "markdown.go",
        "message.go",
        "message_visitor.go",
        "model.go",
        "option_visitor.go",
        "package.go",
        "package_visitor.go",
        "protobuf_file_scanner.go",
        "reserved.go",
        "reserved_visitor.go",
        "rpc.go",
        "rpc_visitor.go",
        "service.go",
        "service_visitor.go",
        "util.go",
        "variables.go",
        "writer_markdown.go",
        "writer_mermaid.go",
    ],
    importpath = "github.com/rrmcguinness/proto-diagram-tool/pkg/proto",
    visibility = ["//visibility:public"],
)

go_test(
    name = "proto_test",
    srcs = [
        "annotation_test.go",
        "attribute_test.go",
        "attribute_visitor_test.go",
        "comment_test.go",
        "comment_visitor_test.go",
        "enum_test.go",
        "enum_value_test.go",
        "enum_value_visitor_test.go",
        "enum_visitor_test.go",
        "import_test.go",
        "import_visitor_test.go",
        "line_test.go",
        "markdown_test.go",
        "message_test.go",
        "message_visitor_test.go",
        "model_test.go",
        "option_visitor_test.go",
        "package_test.go",
        "package_visitor_test.go",
        "reserved_test.go",
        "reserved_visitor_test.go",
        "rpc_test.go",
        "rpc_visitor_test.go",
        "service_test.go",
        "service_visitor_test.go",
        "test_scanner.go",
        "util_test.go",
        "writer_markdown_test.go",
    ],
    data = ["data/input_test_file.txt"],
    embed = [":proto"],
    deps = [
        "@com_github_stretchr_testify//assert",
    ],
)
